--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <artifactId>notifications</artifactId>
     <packaging>jar</packaging>
-    <name>Spring Data JPA and PostgreSQL</name>
+    <name>Spring Controller to send email</name>
     <version>1.0</version>
 
     <parent>
@@ -31,17 +31,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- Spring Data JPA -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-starter-mustache</artifactId>
+            <version>3.4.2</version>
         </dependency>
 
-        <!-- PostgreSQL database -->
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.2</version> <!-- Use the latest version -->
         </dependency>
 
         <!-- Spring Test -->
