--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 logging.level.org.springframework=INFO
-logging.level.mn.dae.pc=DEBUG
+logging.level.mn.dae.pc.notifications=DEBUG
 logging.level.com.zaxxer=INFO
 logging.level.root=INFO
 logging.pattern.console=%-5level %logger{40} - %msg%n
 
 org.springframework.boot.logging.LoggingSystem=Logback
-
-spring.kafka.bootstrap-servers=kafka.kafka.svc.cluster.local:9092
-spring.kafka.consumer.group-id=my-group-id
 
 management.endpoint.health.probes.enabled=true
 management.health.livenessState.enabled=true
